# Cypher

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CYPHER_GUIDE.md  Cargo.toml  PRIVACY.md  README.md  RELEASING.md  REVIEW.md  SECURITY.md  TESTING.md  bunfig.toml  flake.nix  install  package.json  skills-lock.json  turbo.json
.changeset/: README.md  agent-manager-inherit-model.md  clear-model-usage.md  config.json  cypher-security-hardening.md  faster-vscode-settings-save.md  fix-bedrock-sso.md  greetings-performance-fix.md  hide-gpt-5-5-pro.md  jetbrains-dialog-focus-prompt.md  jetbrains-orphan-cli-shutdown.md  jetbrains-prompt-theme.md  jetbrains-prompt-toolbar-focus.md  jetbrains-revert-loading.md  jetbrains-revert-redo.md  jetbrains-rollback-snapshot-notice.md  jetbrains-toolbar-tooltips.md  jetbrains-user-prompt-gap.md  load-initial-diff-previews.md  quiet-permissions-speak.md  remove-gpt-task-prompt.md  sandbox-controls-setting.md  serve-parent-watchdog.md
.github/: pull_request_template.md
.husky/: pre-push
.opencode/: opencode.jsonc
github/: README.md  action.yml
nix/: cypher.nix  node_modules.nix
npm/: cypher-cli-0.1.0.tgz  cypher.js  package.json  postinstall.js
patches/: @silvia-odwyer%2Fphoton-node@0.3.4.patch
perf/: test-suite.md
script/: changelog-github.cjs  changelog.ts  check-cypher-generated-artifacts.ts  check-forbidden-strings.ts  check-md-table-padding.ts  check-model-tool-network.ts  check-opencode-annotations.ts  check-opencode-promise-facades.ts  check-workflows.ts  duplicate-pr.ts  extract-source-links.ts  generate-cli-docs.ts  jetbrains-release-pr.ts  jetbrains-release-validate.ts  publish-start.ts  publish.ts  raw-changelog.ts  setup-git.ts  stats.ts  sync-versions.ts  version.ts
scripts/: install.ps1  install.sh
src/: ai.rs  cli.rs  config.rs  error.rs  main.rs  scanner.rs  tui.rs
(+166 files in other folders)
