[package]
name = "cypher-cli"
version = "0.1.0"
edition = "2024"
description = "Production-grade cybersecurity auditing CLI for developers"
license = "MIT"
repository = "https://github.com/Ayan-Flash/Cypher"
authors = ["Sentinel Security Team"]
readme = "README.md"
keywords = ["security", "audit", "cli", "static-analysis", "devsecops"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.11", features = ["json"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
yaml-rust2 = "0.8"

# Async Runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3"
chrono = "0.4"

# File System
walkdir = "2.5"
glob = "0.3"
ignore = "0.4"
regex = "1.12"

# AST Parsing
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Color Output
colored = "2.1"
termcolor = "1.4"

# Reporting
serde_yaml = "0.9"

# Plugin System
libloading = "0.8"

# Onboarding and UI
dialoguer = { version = "0.11", features = ["password"] }
indicatif = "0.17"
keyring = "2.1"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Enable link-time optimization (LTO)
codegen-units = 1      # Compile all code as a single unit to maximize optimizations
panic = "abort"        # Eliminate panic unwinding logic to shrink binary size
strip = true           # Automatically strip symbols and debug info from binary

